chore: fix android maven
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/flipt-client-kotlin-android/build.gradle
+++ b/flipt-client-kotlin-android/build.gradle
@@ -8,6 +8,10 @@ plugins {
     id 'signing'
 }
 
+group = 'io.flipt'
+version = '0.0.1-rc.1'
+description = 'Flipt Client SDK'
+
 android {
     namespace 'io.flipt'
     ndkVersion '25.1.8937393'
@@ -68,7 +72,9 @@ publishing {
     publications {
         maven(MavenPublication) {
             artifactId = 'flipt-client-android'
-            from components.release
+            afterEvaluate {
+                from components.release
+            }
 
             pom {
                 name = 'Flipt Client Android SDK'
