chore: try to fix wasm-pack command
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/package-wasm-js-engine.yml
+++ b/.github/workflows/package-wasm-js-engine.yml
@@ -52,7 +52,7 @@ jobs:
         run: which wasm-opt || cargo install wasm-opt
 
       - name: Wasm-pack
-        run: wasm-pack build --target ${matrix.target}
+        run: "wasm-pack build --target ${{ matrix.target }}"
 
       - name: Package
         run: |
