feat: allow passing http timeout to rust engine for polling (#825)
* feat: allow passing http timeout to rust engine for polling

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: add to Go readme

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: only install wasm-opt/pack if not installed in action

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: try to fix wasm-pack command

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: set version in gradle wrapper

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: force install of latest wasm tools

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: disable gradle cache for now

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: idk what changed with wasm-pack

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

---------

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/package-wasm-js-engine.yml
+++ b/.github/workflows/package-wasm-js-engine.yml
@@ -20,7 +20,7 @@ jobs:
       matrix:
         target:
           - web
-          - node
+          - nodejs
 
     runs-on: ubuntu-latest
     env:
@@ -46,10 +46,16 @@ jobs:
         run: cargo build --release --package flipt-engine-wasm-js
 
       - name: Install wasm-pack
-        run: cargo install wasm-pack wasm-opt
+        run: cargo install -f wasm-pack
+
+      - name: Install wasm-opt
+        run: cargo install -f wasm-opt
 
       - name: Wasm-pack
-        run: wasm-pack build --target ${matrix.target}
+        run: |
+          pushd flipt-engine-wasm-js
+          wasm-pack build --target ${{ matrix.target }}
+          popd
 
       - name: Package
         run: |
