--- a/.github/workflows/test-android-sdk.yml
+++ b/.github/workflows/test-android-sdk.yml
@@ -45,7 +45,8 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
         with:
-          gradle-version: "8.11"
+          gradle-version: "8.11.1"
+          cache-disabled: true
 
       - name: Checkout Sources
         uses: actions/checkout@v4
