--- a/flipt-client-kotlin-android/build.gradle
+++ b/flipt-client-kotlin-android/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'org.jetbrains.kotlin.plugin.serialization'
     id 'maven-publish'
     id 'signing'
+    id "org.jlleitschuh.gradle.ktlint" version "12.1.0"
 }
 
 group = 'io.flipt'
