--- a/flipt-client-kotlin-android/build.gradle
+++ b/flipt-client-kotlin-android/build.gradle
@@ -10,7 +10,7 @@ plugins {
 }
 
 group = 'io.flipt'
-version = '0.0.1-rc.1'
+version = '0.0.1"
 description = 'Flipt Client SDK'
 
 android {
@@ -24,8 +24,8 @@ android {
         ndk {
             abiFilters "x86_64", "arm64-v8a"
         }
-        versionCode 1
-        versionName "0.0.1-rc.1"
+        versionCode 2
+        versionName "0.0.1"
     }
 
     buildTypes {
