--- a/flipt-client-kotlin-android/build.gradle
+++ b/flipt-client-kotlin-android/build.gradle
@@ -7,6 +7,7 @@ plugins {
     id 'maven-publish'
     id 'signing'
     id "org.jlleitschuh.gradle.ktlint" version "12.1.0"
+    id 'io.github.gradle-nexus.publish-plugin' version '1.3.0'
 }
 
 group = 'io.flipt'
@@ -123,4 +124,21 @@ signing {
     def signingPassphrase = System.getenv('PGP_PASSPHRASE')
     useInMemoryPgpKeys(signingKey, signingPassphrase)
     sign publishing.publications.maven
+}
+
+nexusPublishing {
+    repositories {
+        sonatype {
+            nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
+            snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
+            username = System.getenv("MAVEN_USERNAME")
+            password = System.getenv("MAVEN_PASSWORD")
+            packageGroup = "io.flipt"
+        }
+    }
+    // Enable auto-release
+    transitionCheckOptions {
+        maxRetries.set(60)  // Number of times to retry
+        delayBetween.set(java.time.Duration.ofSeconds(10))  // Time between retries
+    }
 }
