chore: start wiring up tests/actions
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/lint-sdks.yml
+++ b/.github/workflows/lint-sdks.yml
@@ -33,7 +33,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        sdk: ["flipt-client-node", "flipt-client-browser", "flipt-client-react"]
+        sdk: ["flipt-client-node", "flipt-client-browser", "flipt-client-react", "flipt-client-web"]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Sources
