--- a/flipt-client-browser/package.json
+++ b/flipt-client-browser/package.json
@@ -9,7 +9,8 @@
   "author": "Flipt Devs <dev@flipt.io>",
   "license": "MIT",
   "files": [
-    "dist"
+    "dist",
+    "README.md"
   ],
   "repository": {
     "type": "git",
