--- a/flipt-client-node/package.json
+++ b/flipt-client-node/package.json
@@ -7,7 +7,8 @@
   "author": "Flipt Devs <dev@flipt.io>",
   "license": "MIT",
   "files": [
-    "dist"
+    "dist",
+    "README.md"
   ],
   "repository": {
     "type": "git",
