--- a/flipt-client-dart/pubspec.yaml
+++ b/flipt-client-dart/pubspec.yaml
@@ -6,17 +6,17 @@ description: Flipt Client Evaluation SDK for Dart
 dev_dependencies:
   build_runner: ^2.3.3
   json_serializable: ^6.6.2
-  lints: '>=4.0.0 <6.0.0'
+  lints: ">=4.0.0 <6.0.0"
   test: ^1.21.0
 environment:
-  sdk: '>=2.12.0 <4.0.0'
+  sdk: ">=2.12.0 <4.0.0"
 flutter:
   assets:
-  - lib/src/ffi/linux_x86_64/libfliptengine.so
-  - lib/src/ffi/linux_aarch64/libfliptengine.so
-  - lib/src/ffi/darwin_x86_64/libfliptengine.dylib
-  - lib/src/ffi/darwin_aarch64/libfliptengine.dylib
-  - lib/src/ffi/windows_x86_64/fliptengine.dll
+    - lib/src/ffi/linux_x86_64/libfliptengine.so
+    - lib/src/ffi/linux_aarch64/libfliptengine.so
+    - lib/src/ffi/darwin_x86_64/libfliptengine.dylib
+    - lib/src/ffi/darwin_aarch64/libfliptengine.dylib
+    - lib/src/ffi/windows_x86_64/fliptengine.dll
 homepage: https://flipt.io
 name: flipt_client
 version: 0.7.0
