chore: update dependabot
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -21,7 +21,7 @@ updates:
       - "automerge"
 
   - package-ecosystem: npm
-    directory: "/flipt-client-browser"
+    directory: "/flipt-client-web"
     schedule:
       interval: "weekly"
     open-pull-requests-limit: 5
