--- a/flipt-client-web/package.json
+++ b/flipt-client-web/package.json
@@ -1,11 +1,17 @@
 {
-  "name": "@flipt-io/flipt-client-browser",
-  "version": "0.5.0",
-  "description": "DEPRECATED: This package has been renamed to @flipt-io/flipt-client-web. Please update your dependencies.",
-  "deprecated": "This package has been renamed to @flipt-io/flipt-client-web. Please update your dependencies.",
+  "name": "@flipt-io/flipt-client-web",
+  "version": "0.1.0",
+  "description": "Flipt client for web environments (browsers, edge functions, web workers)",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    }
+  },
   "author": "Flipt Devs <dev@flipt.io>",
   "license": "MIT",
   "files": [
@@ -14,13 +20,15 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/flipt-io/flipt-client-sdks/tree/main/flipt-client-browser"
+    "url": "https://github.com/flipt-io/flipt-client-sdks/tree/main/flipt-client-web"
   },
   "keywords": [
     "flipt",
     "feature flags",
     "feature toggles",
-    "wasm"
+    "wasm",
+    "edge functions",
+    "web workers"
   ],
   "scripts": {
     "fmt": "prettier --config .prettierrc 'src/**/*.ts' --write",
