chore: update other descriptions
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/flipt-client-js/package.json
+++ b/flipt-client-js/package.json
@@ -21,7 +21,7 @@
     "build": "rollup -c",
     "test": "jest",
     "lint": "eslint src --ext .ts",
-    "format": "prettier --write src",
+    "fmt": "prettier --write src",
     "clean": "rimraf dist"
   },
   "dependencies": {
