--- a/.github/workflows/lint-sdks.yml
+++ b/.github/workflows/lint-sdks.yml
@@ -33,7 +33,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        sdk: ["flipt-client-node", "flipt-client-browser", "flipt-client-react", "flipt-client-web"]
+        sdk: ["flipt-client-react", "flipt-client-js"]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Sources
