chore: fix  package.json paths
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/flipt-client-js/package.json
+++ b/flipt-client-js/package.json
@@ -3,19 +3,18 @@
   "version": "0.0.1",
   "description": "Flipt Client Evaluation SDK for Web and Node.js",
   "type": "module",
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/esm/index.js",
-  "types": "./dist/types/index.d.ts",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/esm/index.js",
-      "require": "./dist/cjs/index.js",
-      "types": "./dist/types/index.d.ts"
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts"
     }
   },
   "files": [
     "dist",
-    "src",
     "README.md"
   ],
   "scripts": {
@@ -55,7 +54,8 @@
     "flipt",
     "feature flags",
     "feature toggles",
-    "isomorphic"
+    "isomorphic",
+    "wasm"
   ],
   "author": "Flipt Devs <dev@flipt.io>",
   "license": "MIT",
