--- a/flipt-client-js/package.json
+++ b/flipt-client-js/package.json
@@ -25,7 +25,6 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
-    "node-fetch": "^3.3.0"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^12.1.0",
@@ -42,7 +41,9 @@
     "@typescript-eslint/parser": "^5.47.0",
     "eslint": "^8.30.0",
     "rimraf": "^4.1.2",
-    "ts-jest": "^29.0.3"
+    "ts-jest": "^29.0.3",
+    "node-fetch": "^3.3.0",
+    "@types/node-fetch": "^2.6.11"
   },
   "engines": {
     "node": ">=14"
