--- a/flipt-client-js/package.json
+++ b/flipt-client-js/package.json
@@ -3,14 +3,26 @@
   "version": "0.0.1",
   "description": "Flipt Client Evaluation SDK for Web and Node.js",
   "type": "module",
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/node/index.cjs",
+  "module": "./dist/browser/index.mjs",
+  "types": "./dist/types/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs",
-      "types": "./dist/index.d.ts"
+      "node": {
+        "import": "./dist/node/index.mjs",
+        "require": "./dist/node/index.cjs",
+        "types": "./dist/types/node/index.d.ts"
+      },
+      "browser": {
+        "import": "./dist/browser/index.mjs",
+        "require": "./dist/browser/index.cjs",
+        "types": "./dist/types/browser/index.d.ts"
+      },
+      "default": {
+        "import": "./dist/browser/index.mjs",
+        "require": "./dist/browser/index.cjs",
+        "types": "./dist/types/browser/index.d.ts"
+      }
     }
   },
   "files": [
@@ -18,32 +30,33 @@
     "README.md"
   ],
   "scripts": {
-    "build": "rollup -c",
+    "build": "tsc --emitDeclarationOnly && rollup -c",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "lint": "eslint src --ext .ts",
     "fmt": "prettier --write src",
     "clean": "rimraf dist"
   },
   "dependencies": {
+    "node-fetch": "^3.3.0"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^12.1.0",
     "@rollup/plugin-wasm": "^6.2.2",
     "@types/jest": "^29.5.12",
     "@types/node": "^18.11.17",
-    "jest": "^29.7.0",
-    "rollup": "^4.14.0",
-    "tslib": "^2.6.2",
-    "typescript": "^5.4.3",
-    "undici": "^7.1.0",
-    "prettier": "^3.1.0",
+    "@types/node-fetch": "^2.6.11",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
     "eslint": "^8.30.0",
-    "rimraf": "^4.1.2",
-    "ts-jest": "^29.0.3",
+    "jest": "^29.7.0",
     "node-fetch": "^3.3.0",
-    "@types/node-fetch": "^2.6.11"
+    "prettier": "^3.1.0",
+    "rimraf": "^4.1.2",
+    "rollup": "^4.14.0",
+    "ts-jest": "^29.0.3",
+    "tslib": "^2.6.2",
+    "typescript": "^5.4.3",
+    "undici": "^7.1.0"
   },
   "engines": {
     "node": ">=14"
