--- a/flipt-client-js/tsconfig.json
+++ b/flipt-client-js/tsconfig.json
@@ -1,14 +1,30 @@
 {
   "compilerOptions": {
-    "module": "ESNext",
-    "target": "ESNext",
+    "target": "es2020",
+    "module": "esnext",
     "lib": [
-      "ESNext",
-      "DOM"
+      "es2020",
+      "dom"
     ],
     "declaration": true,
-    "declarationDir": "./dist",
+    "declarationDir": "./dist/types",
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "strict": true,
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": true
-  }
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/types"
+    ]
+  },
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
