chore: package-js-sdk workflow
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/package-js-sdk.yml
+++ b/.github/workflows/package-js-sdk.yml
@@ -1,7 +1,7 @@
-name: Package Web SDK
+name: Package JavaScript SDK
 on:
   push:
-    tags: ["flipt-client-web-**"]
+    tags: ["flipt-client-js-**"]
 
 permissions:
   contents: write
@@ -13,5 +13,5 @@ jobs:
   build:
     uses: ./.github/workflows/package-wasm-sdks.yml
     with:
-      sdks: web
+      sdks: js
     secrets: inherit
