--- a/flipt-client-js/package.json
+++ b/flipt-client-js/package.json
@@ -5,24 +5,43 @@
   "type": "module",
   "main": "./dist/node/index.cjs",
   "module": "./dist/browser/index.mjs",
-  "types": "./dist/types/index.d.ts",
   "exports": {
     ".": {
       "node": {
+        "types": "./dist/types/node/index.d.ts",
         "import": "./dist/node/index.mjs",
-        "require": "./dist/node/index.cjs",
-        "types": "./dist/types/node/index.d.ts"
+        "require": "./dist/node/index.cjs"
       },
       "browser": {
+        "types": "./dist/types/browser/index.d.ts",
         "import": "./dist/browser/index.mjs",
-        "require": "./dist/browser/index.cjs",
-        "types": "./dist/types/browser/index.d.ts"
+        "require": "./dist/browser/index.cjs"
       },
       "default": {
+        "types": "./dist/types/browser/index.d.ts",
         "import": "./dist/browser/index.mjs",
-        "require": "./dist/browser/index.cjs",
-        "types": "./dist/types/browser/index.d.ts"
+        "require": "./dist/browser/index.cjs"
       }
+    },
+    "./types": {
+      "types": "./dist/types/core/types.d.ts"
+    },
+    "./node": {
+      "types": "./dist/types/node/index.d.ts",
+      "import": "./dist/node/index.mjs",
+      "require": "./dist/node/index.cjs"
+    },
+    "./browser": {
+      "types": "./dist/types/browser/index.d.ts",
+      "import": "./dist/browser/index.mjs",
+      "require": "./dist/browser/index.cjs"
+    }
+  },
+  "typesVersions": {
+    "*": {
+      "node": ["./dist/types/node/index.d.ts"],
+      "browser": ["./dist/types/browser/index.d.ts"],
+      "types": ["./dist/types/core/types.d.ts"]
     }
   },
   "files": [
