--- a/flipt-client-js/package.json
+++ b/flipt-client-js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@flipt-io/flipt-client-js",
-  "version": "0.0.1-rc.4",
+  "version": "0.0.1-rc.5",
   "description": "Flipt Client Evaluation SDK for Web and Node.js",
   "type": "module",
   "main": "./dist/node/index.cjs",
@@ -35,9 +35,15 @@
   },
   "typesVersions": {
     "*": {
-      "*": ["./dist/types/index.d.ts"],
-      "node": ["./dist/types/index.d.ts"],
-      "browser": ["./dist/types/index.d.ts"]
+      "*": [
+        "./dist/types/index.d.ts"
+      ],
+      "node": [
+        "./dist/types/index.d.ts"
+      ],
+      "browser": [
+        "./dist/types/index.d.ts"
+      ]
     }
   },
   "files": [
