--- a/flipt-client-react/package.json
+++ b/flipt-client-react/package.json
@@ -30,7 +30,8 @@
     "fmt": "prettier --config .prettierrc 'src/**/*.@(ts|tsx|js)' '**/*.@(ts|tsx|js)' --write",
     "lint": "eslint 'src/**/*.@(ts|tsx|js)' '**/*.@(ts|tsx|js)'",
     "test": "jest",
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "clean": "rimraf dist"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
@@ -55,6 +56,7 @@
     "prettier": "^3.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "rimraf": "^6.0.1",
     "rollup": "^4.22.2",
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
@@ -67,6 +69,6 @@
     "react-dom": "^19.0.0"
   },
   "dependencies": {
-    "@flipt-io/flipt-client-browser": "^0.5.0"
+    "@flipt-io/flipt-client-js": "^0.0.1-rc.5"
   }
 }
