--- a/flipt-client-react/package.json
+++ b/flipt-client-react/package.json
@@ -41,7 +41,7 @@
     "@rollup/plugin-typescript": "^12.1.0",
     "@testing-library/react": "^16.0.1",
     "@types/jest": "^29.5.13",
-    "@types/react": "^19.0.2",
+    "@types/react": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^8.11.0",
     "@typescript-eslint/parser": "^8.11.0",
     "eslint": "^9.13.0",
@@ -54,8 +54,8 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-jsdom-global": "^4.0.0",
     "prettier": "^3.3.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "rimraf": "^6.0.1",
     "rollup": "^4.22.2",
     "rollup-plugin-dts": "^6.1.1",
@@ -65,8 +65,8 @@
     "typescript": "^5.6.0"
   },
   "peerDependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0"
   },
   "dependencies": {
     "@flipt-io/flipt-client-js": "^0.0.1-rc.5"
