--- a/flipt-client-browser/package.json
+++ b/flipt-client-browser/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@flipt-io/flipt-client-browser",
   "version": "0.5.0",
-  "description": "DEPRECATED: This package has been renamed to @flipt-io/flipt-client-js. Please update your dependencies.",
-  "deprecated": "This package has been renamed to @flipt-io/flipt-client-js. Please update your dependencies.",
+  "description": "DEPRECATED: This package has been superseded by @flipt-io/flipt-client-js. Please update your dependencies.",
+  "deprecated": "This package has been superseded by @flipt-io/flipt-client-js. Please update your dependencies.",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
