feat: flipt-client-js slim version for edge
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/flipt-client-js/package.json
+++ b/flipt-client-js/package.json
@@ -32,7 +32,12 @@
       "import": "./dist/browser/index.mjs",
       "require": "./dist/browser/index.cjs"
     },
-    "./engine.wasm": "./dist/flipt_engine_wasm_js_bg.wasm"
+    "./engine.wasm": "./dist/flipt_engine_wasm_js_bg.wasm",
+    "./slim": {
+      "types": "./dist/types/slim/index.d.ts",
+      "import": "./dist/slim/index.mjs",
+      "require": "./dist/slim/index.cjs"
+    }
   },
   "typesVersions": {
     "*": {
