--- a/flipt-client-js/package.json
+++ b/flipt-client-js/package.json
@@ -2,6 +2,7 @@
   "name": "@flipt-io/flipt-client-js",
   "version": "0.0.2",
   "description": "Flipt Client Evaluation SDK for Web and Node.js",
+  "sideEffects": false,
   "type": "module",
   "main": "./dist/node/index.cjs",
   "module": "./dist/browser/index.mjs",
@@ -31,7 +32,8 @@
       "types": "./dist/types/index.d.ts",
       "import": "./dist/browser/index.mjs",
       "require": "./dist/browser/index.cjs"
-    }
+    },
+    "./engine.wasm": "./dist/flipt_engine_wasm_js_bg.wasm"
   },
   "typesVersions": {
     "*": {
