--- a/flipt-client-js/tsconfig.json
+++ b/flipt-client-js/tsconfig.json
@@ -7,6 +7,10 @@
     "declarationDir": "./dist/types",
     "outDir": "./dist",
     "rootDir": "./src",
+    "baseUrl": "./src",
+    "paths": {
+      "~/*": ["./*"]
+    },
     "strict": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
