feat: flipt-client-js slim version for edge (#932)
* feat: flipt-client-js slim version for edge

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: try to get node wasm loading in cjs again

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* Revert "chore: try to get node wasm loading in cjs again"

This reverts commit 1eac2bb08785d8b6876651b706e8bb7312697380.

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: try to simplify build

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: just go back to auto-line the node wasm code too

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: rename to engine.wasm

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: revert rollup config

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: rebase on main

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: update after testing

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

---------

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/flipt-client-js/package.json
+++ b/flipt-client-js/package.json
@@ -20,6 +20,10 @@
       "default": {
         "import": "./dist/browser/index.mjs",
         "require": "./dist/browser/index.cjs"
+      },
+      "slim": {
+        "import": "./dist/slim/index.mjs",
+        "require": "./dist/slim/index.cjs"
       }
     },
     "./node": {
@@ -31,6 +35,11 @@
       "types": "./dist/types/index.d.ts",
       "import": "./dist/browser/index.mjs",
       "require": "./dist/browser/index.cjs"
+    },
+    "./slim": {
+      "types": "./dist/types/slim/index.d.ts",
+      "import": "./dist/slim/index.mjs",
+      "require": "./dist/slim/index.cjs"
     },
     "./engine.wasm": "./dist/flipt_engine_wasm_js_bg.wasm"
   },
@@ -44,6 +53,9 @@
       ],
       "browser": [
         "./dist/types/index.d.ts"
+      ],
+      "slim": [
+        "./dist/types/slim/index.d.ts"
       ]
     }
   },
