--- a/flipt-client-dart/pubspec.yaml
+++ b/flipt-client-dart/pubspec.yaml
@@ -1,4 +1,5 @@
 dependencies:
+  device_info_plus: ^11.3.0
   ffi: ^2.0.1
   json_annotation: ^4.9.0
   path: ^1.9.0
@@ -17,6 +18,9 @@ flutter:
     - lib/src/ffi/darwin_x86_64/libfliptengine.dylib
     - lib/src/ffi/darwin_aarch64/libfliptengine.dylib
     - lib/src/ffi/windows_x86_64/fliptengine.dll
+    - lib/src/ffi/android_aarch64/libfliptengine.so
+    - lib/src/ffi/ios_aarch64_sim/libfliptengine.dylib
+    - lib/src/ffi/ios_aarch64/libfliptengine.dylib
 homepage: https://flipt.io
 name: flipt_client
 version: 0.7.0
