--- a/flipt-client-dart/pubspec.yaml
+++ b/flipt-client-dart/pubspec.yaml
@@ -17,6 +17,8 @@ flutter:
     - lib/src/ffi/darwin_x86_64/libfliptengine.dylib
     - lib/src/ffi/darwin_aarch64/libfliptengine.dylib
     - lib/src/ffi/windows_x86_64/fliptengine.dll
+    - lib/src/ffi/android_aarch64/libfliptengine.so
+    - lib/src/ffi/ios_aarch64/libfliptengine.dylib
 homepage: https://flipt.io
 name: flipt_client
 version: 0.7.0
