--- a/flipt-client-dart/pubspec.yaml
+++ b/flipt-client-dart/pubspec.yaml
@@ -1,25 +1,29 @@
+name: flipt_client
+description: Flipt Client Evaluation SDK for Dart
+version: 0.8.0
+homepage: https://flipt.io
+
+environment:
+  sdk: '>=2.12.0 <4.0.0'
+
+platforms:
+  - android
+  - ios
+  - linux
+  - macos
+
 dependencies:
   ffi: ^2.0.1
   json_annotation: ^4.9.0
   path: ^1.9.0
-description: Flipt Client Evaluation SDK for Dart
+
 dev_dependencies:
   build_runner: ^2.3.3
   json_serializable: ^6.6.2
   lints: '>=4.0.0 <6.0.0'
   test: ^1.21.0
   ffigen: ^9.0.0
-environment:
-  sdk: '>=2.12.0 <4.0.0'
-homepage: https://flipt.io
-name: flipt_client
-version: 0.8.0
-files:
-  - binaries/darwin_aarch64/libfliptengine.dylib
-  - binaries/darwin_x86_64/libfliptengine.dylib
-  - binaries/linux_aarch64/libfliptengine.so
-  - binaries/linux_x86_64/libfliptengine.so
-  - binaries/windows_x86_64/fliptengine.dll
+
 flutter:
   assets:
     - binaries/darwin_aarch64/libfliptengine.dylib
@@ -27,3 +31,10 @@ flutter:
     - binaries/linux_aarch64/libfliptengine.so
     - binaries/linux_x86_64/libfliptengine.so
     - binaries/windows_x86_64/fliptengine.dll
+
+files:
+  - binaries/darwin_aarch64/libfliptengine.dylib
+  - binaries/darwin_x86_64/libfliptengine.dylib
+  - binaries/linux_aarch64/libfliptengine.so
+  - binaries/linux_x86_64/libfliptengine.so
+  - binaries/windows_x86_64/fliptengine.dll
