chore: dart lint dont err on warnings
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/lint-sdks.yml
+++ b/.github/workflows/lint-sdks.yml
@@ -155,7 +155,7 @@ jobs:
 
       - name: Analyze Dart code
         working-directory: flipt-client-dart
-        run: dart analyze
+        run: dart analyze --no-fatal-warnings
 
   lint-go:
     name: Lint Go
