fix: try to fix Flutter/dart mobile support for Android (#948)
* feat: try to fix dart for android and ios

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: add ios

* chore: now add ios to gitignore

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: try to fix loading on all platforms

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: just try android for now

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: fix dart format

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: fix lint errors

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: dart lint dont err on warnings

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: change paths for dart native

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

---------

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/lint-sdks.yml
+++ b/.github/workflows/lint-sdks.yml
@@ -135,6 +135,28 @@ jobs:
           chmod +x ./gradlew
           ./gradlew ktlintCheck
 
+  lint-dart:
+    name: Lint Dart
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Sources
+        uses: actions/checkout@v4
+
+      - name: Install Dart
+        uses: dart-lang/setup-dart@v1
+
+      - name: Get Dart dependencies
+        working-directory: flipt-client-dart
+        run: dart pub get
+
+      - name: Format Dart code
+        working-directory: flipt-client-dart
+        run: dart format --output=none --set-exit-if-changed .
+
+      - name: Analyze Dart code
+        working-directory: flipt-client-dart
+        run: dart analyze --no-fatal-warnings
+
   lint-go:
     name: Lint Go
     runs-on: ubuntu-latest
