--- a/flipt-client-dart/.gitignore
+++ b/flipt-client-dart/.gitignore
@@ -7,7 +7,7 @@
 pubspec.lock
 
 # Shared libraries
-lib/src/ffi/**/*.so
-lib/src/ffi/**/*.dylib
-lib/src/ffi/**/*.a
-lib/src/ffi/**/*.dll
+native/
+android/
+ios/
+ffi/
