--- a/flipt-client-dart/pubspec.yaml
+++ b/flipt-client-dart/pubspec.yaml
@@ -1,24 +1,39 @@
+name: flipt_client
+description: Flipt Client Evaluation SDK for Dart
+version: 0.8.0
+homepage: https://flipt.io
+
+environment:
+  sdk: '>=2.17.0 <4.0.0'
+
+platforms:
+  android:
+  linux:
+  macos:
+
 dependencies:
   ffi: ^2.0.1
   json_annotation: ^4.9.0
   path: ^1.9.0
-description: Flipt Client Evaluation SDK for Dart
+
 dev_dependencies:
   build_runner: ^2.3.3
   json_serializable: ^6.6.2
   lints: '>=4.0.0 <6.0.0'
   test: ^1.21.0
-environment:
-  sdk: '>=2.12.0 <4.0.0'
+  ffigen: ^9.0.0
+
 flutter:
   assets:
-  - lib/src/ffi/linux_x86_64/libfliptengine.so
-  - lib/src/ffi/linux_aarch64/libfliptengine.so
-  - lib/src/ffi/darwin_x86_64/libfliptengine.dylib
-  - lib/src/ffi/darwin_aarch64/libfliptengine.dylib
-  - lib/src/ffi/windows_x86_64/fliptengine.dll
-  - lib/src/ffi/android_aarch64/libfliptengine.so
-  - lib/src/ffi/ios_aarch64/libfliptengine.dylib
-homepage: https://flipt.io
-name: flipt_client
-version: 0.8.0
+    - native/darwin_aarch64/libfliptengine.dylib
+    - native/darwin_x86_64/libfliptengine.dylib
+    - native/linux_aarch64/libfliptengine.so
+    - native/linux_x86_64/libfliptengine.so
+    - native/windows_x86_64/fliptengine.dll
+
+files:
+  - native/darwin_aarch64/libfliptengine.dylib
+  - native/darwin_x86_64/libfliptengine.dylib
+  - native/linux_aarch64/libfliptengine.so
+  - native/linux_x86_64/libfliptengine.so
+  - native/windows_x86_64/fliptengine.dll
