--- a/flipt-client-dart/pubspec.yaml
+++ b/flipt-client-dart/pubspec.yaml
@@ -1,39 +1,33 @@
-name: flipt_client
-description: Flipt Client Evaluation SDK for Dart
-version: 0.8.0
-homepage: https://flipt.io
-
-environment:
-  sdk: '>=2.17.0 <4.0.0'
-
-platforms:
-  android:
-  linux:
-  macos:
-
 dependencies:
   ffi: ^2.0.1
   json_annotation: ^4.9.0
   path: ^1.9.0
-
+description: Flipt Client Evaluation SDK for Dart
 dev_dependencies:
   build_runner: ^2.3.3
+  ffigen: ^9.0.0
   json_serializable: ^6.6.2
   lints: '>=4.0.0 <6.0.0'
   test: ^1.21.0
-  ffigen: ^9.0.0
-
+environment:
+  sdk: '>=2.17.0 <4.0.0'
+files:
+- native/darwin_aarch64/libfliptengine.dylib
+- native/darwin_x86_64/libfliptengine.dylib
+- native/linux_aarch64/libfliptengine.so
+- native/linux_x86_64/libfliptengine.so
+- native/windows_x86_64/fliptengine.dll
 flutter:
   assets:
-    - native/darwin_aarch64/libfliptengine.dylib
-    - native/darwin_x86_64/libfliptengine.dylib
-    - native/linux_aarch64/libfliptengine.so
-    - native/linux_x86_64/libfliptengine.so
-    - native/windows_x86_64/fliptengine.dll
-
-files:
   - native/darwin_aarch64/libfliptengine.dylib
   - native/darwin_x86_64/libfliptengine.dylib
   - native/linux_aarch64/libfliptengine.so
   - native/linux_x86_64/libfliptengine.so
   - native/windows_x86_64/fliptengine.dll
+homepage: https://flipt.io
+name: flipt_client
+platforms:
+  android: null
+  linux: null
+  macos: null
+version: 0.9.0-rc.1
