chore: tar up xcframework
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/package-ffi-engine-ios.yml
+++ b/.github/workflows/package-ffi-engine-ios.yml
@@ -122,9 +122,13 @@ jobs:
             -headers "/tmp/build/xcframework/ios-arm64-simulator/Headers" \
             -output "/tmp/Sources/FliptEngineFFI.xcframework"
 
+      - name: Archive XCFramework
+        run: |
+          tar -czvf /tmp/Sources/FliptEngineFFI.xcframework.tar.gz -C /tmp/Sources FliptEngineFFI.xcframework
+
       - name: Upload Release Assets (Tag)
         uses: softprops/action-gh-release@v2
         if: startsWith(inputs.tag, 'flipt-engine-ffi-v')
         with:
           tag_name: ${{ inputs.tag }}
-          files: /tmp/Sources/FliptEngineFFI.xcframework
+          files: /tmp/Sources/FliptEngineFFI.xcframework.tar.gz
