chore: try to fix flutter lib bundling
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/flipt-client-dart/pubspec.yaml
+++ b/flipt-client-dart/pubspec.yaml
@@ -24,6 +24,13 @@ flutter:
   - native/linux_aarch64/libfliptengine.so
   - native/linux_x86_64/libfliptengine.so
   - native/windows_x86_64/fliptengine.dll
+  plugin:
+    platforms:
+      android:
+        package: io.flipt.client
+        pluginClass: none
+      ios:
+        pluginClass: none
 homepage: https://flipt.io
 name: flipt_client
 platforms:
