--- a/flipt-client-dart/pubspec.yaml
+++ b/flipt-client-dart/pubspec.yaml
@@ -5,7 +5,7 @@ dependencies:
 description: Flipt Client Evaluation SDK for Dart
 dev_dependencies:
   build_runner: ^2.3.3
-  ffigen: ">=9.0.0 <19.0.0"
+  ffigen: '>=9.0.0 <19.0.0'
   json_serializable: ^6.6.2
   lints: '>=4.0.0 <6.0.0'
   test: ^1.21.0
@@ -37,4 +37,4 @@ platforms:
   android: null
   linux: null
   macos: null
-version: 0.9.0-rc.1
+version: 0.9.0-rc.2
