--- a/flipt-client-dart/pubspec.yaml
+++ b/flipt-client-dart/pubspec.yaml
@@ -11,6 +11,7 @@ dev_dependencies:
   test: ^1.21.0
 environment:
   sdk: '>=2.17.0 <4.0.0'
+  flutter: ">=1.10.0"
 files:
 - native/darwin_aarch64/libfliptengine.dylib
 - native/darwin_x86_64/libfliptengine.dylib
