--- a/flipt-client-dart/pubspec.yaml
+++ b/flipt-client-dart/pubspec.yaml
@@ -10,8 +10,8 @@ dev_dependencies:
   lints: '>=4.0.0 <6.0.0'
   test: ^1.21.0
 environment:
+  flutter: '>=1.20.0'
   sdk: '>=2.17.0 <4.0.0'
-  flutter: ">=1.20.0"
 files:
 - native/darwin_aarch64/libfliptengine.dylib
 - native/darwin_x86_64/libfliptengine.dylib
@@ -36,4 +36,4 @@ platforms:
   android: null
   linux: null
   macos: null
-version: 0.9.0-rc.2
+version: 0.9.0-rc.3
